tests/NormalTests/paczka1/small_fuzzy/22711031.err
Error in line 3: f9oyk S306 91,5
Error in line 2: 6UqnhILwa5 S306 96,6
Error in line 1: 21jfQRswkms A33 89,2
Error in line 9: 21jfQRswkms A622 -2,2
